# Mondial-Xboost

./: .editorconfig  .gitignore  .vercelignore  CONTRIBUTING.md  Makefile  Mondial-Xboost.sln  Oloraculo.sln  PLAN-MONDIAL-XBOOST.md  PLAN-OLORACULO-XBOOST.md  README.md  mondial  mondial.cmd  mondial.ps1  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements-vercel.txt  requirements.txt  run.ps1  start-ml-bridge.bat  start-ml-bridge.ps1  start-platform.sh  vercel.json
.agents/: expert-council.md  orchestrator.md
MondialXboost.Web/: MondialXboostConfig.cs  Program.cs  appsettings.json
MondialXboost.Web.Tests/: MondialXboost.Web.Tests.csproj
Oloraculo.Web/: Oloraculo.Web.csproj  OloraculoConfig.cs  Program.cs  appsettings.json
Oloraculo.Web.Tests/: Oloraculo.Web.Tests.csproj
api/: index.py
backtest/: __init__.py  world_cup_backtest.py
colab/: celda2_para_pegar.py  mondial_xboost_xgboost.ipynb
dashboard/: app.js  index.html  lab.js  test-dashboard.js  test-lab.js  test-lab.mjs  training.js  wc2026.js
data/: football_data_client.py  wc2026_features.parquet  wc2026_fixtures.json  wc2026_predictions.json  wc2026_predictions.md  wc2026_tournament.json
docs/: API_ARCHITECTURE_AUDIT.md  DOCUMENTACION.md  PLAN_MEJORAS.md  TERMINAL_GUIDE.md  index.html
models/: loop_best_v2.json
mondial_xboost.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
predictors/: __init__.py  api.py  blended_predictor.py  cold_start_model.py  etl.py  feature_engineering.py  llm_analysis_service.py  model_manifest.py  player_weights.py  random_forest_engine.py  xgboost_engine.py
scrapers/: __init__.py  flashscore_scraper.py  football_data_scraper.py  news_scraper.py  news_scraper_service.py  player_stats_service.py  wikipedia_scraper.py
scripts/: audit_leakage.py  auto_loop_engineering.py  autoresearch_worldcup.py  build_wc2026_features.py  build_wc2026_tournament.py  compare_elo_worldfootball.py  generate_wc2026_fixtures.py  loop_engineering.py  mondial_cli.py  predict.py  predict_wc2026.py  run-backtest-gate.py  run-bridge-smoke-test.py  run-data-council.py  run-tests.py  run_backtest_gate.py  run_bridge_smoke_test.py  run_data_council.py  run_tests.py  train.py  training_dashboard.py  training_monitor.py  training_orchestrator.py  training_server.py  update_obsidian.py  verify-gates.py  verify_gates.py  wc2026_engine.py  (+1 more)
(+1006 files in other folders)
