[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mondial-xboost"
version = "2.0.0"
description = "Hybrid .NET + Python football prediction system"
requires-python = ">=3.11"
dependencies = [
    "xgboost>=2.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
    "pyarrow>=15.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-dotenv>=1.0.0",
    "country_converter>=1.3.0",
    "optuna>=3.6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pip-audit>=2.7.0",
]

[project.scripts]
mondial = "scripts.mondial_cli:main"

[tool.setuptools]
packages = ["scripts", "predictors", "backtest", "scrapers", "tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "scripts/archive",
    "data",
    "models",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
